# neodragon

./: .gitignore  LICENSE.txt  README.md  index.html  pyproject.toml  repolint.json
.github/workflows/: qcom-preflight-checks.yml
assets/e2e_qualitative/: videos.txt
docker/: Dockerfile  requirements.txt
neodragon/: __init__.py  context_adapter.py  distil_t5.py  first_frame_gen.py  pyramid_scheduler.py  safety_checker.py  text_encoder_bundle.py
neodragon/asymmetric_causal_video_vae/: __init__.py  decoder.py  encoder.py  modeling_block.py  modeling_causal_ops.py  modeling_resnet.py
neodragon/pyramid_mmdit/: __init__.py  modeling_block.py  modeling_embedding.py  modeling_normalization.py
neodragon/utils/: __init__.py  generation_utils.py  visualisation_utils.py
prompts/: showcase_prompts.txt
scripts/: inference_neodragon.py  make_fixed_video_grid.py
static/css/: index.css
